--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ logging.level.bootcamp.controller.InventoryController=DEBUG
 company.money=5000
 company.stock.price=50
 #Vendor url
-vendor-a.url=localhost:8080
+vendor-a.url=http://192.168.88.210:8080
 vendor-b.url=localhost:8080
 vendor-c.url=localhost:8080
 
@@ -28,6 +28,6 @@ supplier-b.url=localhost:8080
 supplier-c.url=localhost:8080
 
 product.status.schedule=0 3/5 * * * *
-inventory.status.schedule=0 0/3 * * * *
+inventory.status.schedule=10 * * * * *
 
 listOfThings=hammer,nails,a brand new car, chocolate, a rabbit, fuzzy slippers
