--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,6 @@ supplier-b.url=localhost:8080
 supplier-c.url=localhost:8080
 
 product.status.schedule=0 3/5 * * * *
-inventory.status.schedule=10 * * * * *
+inventory.status.schedule=0/10 * * * * *
 
 listOfThings=hammer,nails,a brand new car, chocolate, a rabbit, fuzzy slippers
