--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,19 +15,15 @@ spring.datasource.driver-class-name=org.h2.Driver
 logging.level.bootcamp.controller.InventoryController=DEBUG
 
 #Initial values
-company.money=5000
+company.money=5000d
 company.stock.price=50
 #Vendor url
 vendor-a.url=http://192.168.88.210:8080
 vendor-b.url=localhost:8080
 vendor-c.url=localhost:8080
 
-#Supplier url
-supplier-a.url=localhost:8080
-supplier-b.url=localhost:8080
-supplier-c.url=localhost:8080
+
 
 product.status.schedule=0 3/5 * * * *
 inventory.status.schedule=0/10 * * * * *
 
-listOfThings=hammer,nails,a brand new car, chocolate, a rabbit, fuzzy slippers
